--- a/site-hommage/index.html
+++ b/site-hommage/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
-<body>
+<body >
     <header>
 
         <div class="logo left">
-                <i id="menu" class="material-icons">menu</i>
+                 <a href=""><i id="menu" class="material-icons">menu</i></a>
                     
         </div>
 
